--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
+<p>Hello!</p>
 <header>
     <h1>SDI TERMNUMBER: FULL NAME</h1>
     <h2>Project 2</h2>
