Name, term number

--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FULL NAME :: Project 2 :: SDI TERMNUMBER</title>
+    <title>Linden Daniels :: Project 2 :: 1501 </title>
     <link rel="stylesheet" href="sdi.css" type="text/css" />
     <meta charset="UTF-8">
 </head>
 <body>
 <p>Hello!</p>
 <header>
-    <h1>SDI TERMNUMBER: FULL NAME</h1>
+    <h1>1501: Linden Daniels</h1>
     <h2>Project 2</h2>
 </header>
 <article>
@@ -17,7 +17,7 @@
 <p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
 </article>
 <footer>
-    <p>COMPLETION DATE, FULL NAME</p>
+    <p>COMPLETION DATE, Linden R. Daniels</p>
 </footer>
 <script type="text/javascript" src="daniels_linden_assignment2.js"></script>
 </body>
