--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -12,12 +12,11 @@
     <h2>Project 2</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
-<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
-</article>
+<p>I chose to do a simulator based on those old adopt a pet games you could play.</p>
+<p>I love dogs and I enjoyed those games in the past. Eventually I'd love to code a more complicated one!</p>
+
 <footer>
-    <p>COMPLETION DATE, Linden R. Daniels</p>
+    <p>01/17/15, Linden R. Daniels</p>
 </footer>
 <script type="text/javascript" src="daniels_linden_assignment2.js"></script>
 </body>
